# oep-client

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTE.md  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: issue_template_bug.md  issue_template_feature.md
.github/workflows/: pypi.yml
oep-client/: __init__.py  client.py
oep_client/: __init__.py  __main__.py  _dialect.py  advanced_api.py  cli.py  client.py  dialect.py  exceptions.py  oep_client.py  script.py  test.py  utils.py
