[project]
name = "oep-client"
version = "0.18.2"
description = "client side tool for openenergy platform"
license = "CC0-1.0"
authors = [{ name = "Christian Winger", email = "c.winger@oeko.de" }]
dependencies = ["click", "pandas", "requests"]
requires-python = ">=3.10"
readme = "README.md"
urls = { "Repository" = "https://github.com/wingechr/oep-client" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["oep_client"]

[dependency-groups]
dev = ["bumpversion", "pre-commit"]

[project.scripts]
oep-client = "oep_client.__main__:main"
